--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ pest_derive = "2.1"
 snafu = "0.6"
 enquote = "1.0"
 
+[dev-dependencies]
+indoc = "0.3"
+
 [lib]
 name = "dockerfile_parser"
 path = "src/lib.rs"
