--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ pest = "2.1"
 pest_derive = "2.1"
 snafu = "0.6"
 enquote = "1.0"
+regex = "1.4"
+lazy_static = "1.4"
 
 [dev-dependencies]
 indoc = "0.3"
