Support singly-quoted ARG and ENV instructions

--- a/src/dockerfile_parser.pest
+++ b/src/dockerfile_parser.pest
@@ -3,7 +3,7 @@
 // https://github.com/pest-parser/pest/blob/master/grammars/src/grammars/toml.pest
 
 dockerfile = { SOI ~ meta_step ~ (NEWLINE ~ meta_step)* ~ EOI }
-meta_step = _{ ws* ~ (step | comment)? ~ ws* } 
+meta_step = _{ ws* ~ (step | comment)? ~ ws* }
 
 step = _{
   (
@@ -32,8 +32,11 @@ step = _{
 comment = _{ "#" ~ (!NEWLINE ~ ANY)* }
 string  = @{ "\"" ~ inner ~ "\"" }
 inner   = @{ (!("\"" | "\\" | "\u{0000}" | "\u{001F}") ~ ANY)* ~ (escape ~ inner)? }
-escape  = @{ "\\" ~ ("b" | "t" | "n" | "f" | "r" | "\"" | "\\" | unicode | NEWLINE)? }
+escape  = @{ "\\" ~ ("b" | "t" | "n" | "f" | "r" | "\"" | "\\" | "'" | unicode | NEWLINE)? }
 unicode = @{ "u" ~ ASCII_HEX_DIGIT{4} | "U" ~ ASCII_HEX_DIGIT{8} }
+
+single_quoted_string = @{ "'" ~ single_quoted_inner ~ "'" }
+single_quoted_inner  = @{ (!("'" | "\\" | "\u{0000}" | "\u{001F}") ~ ANY)* ~ (escape ~ single_quoted_inner)? }
 
 // insignificant whitespace, not repeated
 ws = _{ " " | "\t" }
@@ -48,7 +51,7 @@ arg_ws_maybe = _{ (ws | ("\\" ~ NEWLINE))* }
 // escape (\)
 any_breakable = _{
   (
-    !NEWLINE ~ 
+    !NEWLINE ~
     !("\\" ~ NEWLINE) ~
     ANY
   )* ~ ("\\" ~ NEWLINE ~ any_breakable)?
@@ -85,7 +88,8 @@ from = { ^"from" ~ arg_ws ~ from_image ~ from_alias_outer?  }
 arg_name = @{ ASCII_ALPHA ~ (ASCII_ALPHANUMERIC | "_")* }
 arg_value = ${ any_whitespace }
 arg_quoted_value = ${ string }
-arg = { ^"arg" ~ arg_ws ~ arg_name ~ ("=" ~ (arg_quoted_value | arg_value))? }
+arg_single_quoted_value = ${ single_quoted_string }
+arg = { ^"arg" ~ arg_ws ~ arg_name ~ ("=" ~ (arg_single_quoted_value | arg_quoted_value | arg_value))? }
 
 label_name = ${ any_equals }
 label_quoted_name = ${ string }
@@ -117,12 +121,14 @@ copy = { ^"copy" ~ (arg_ws ~ copy_flag)* ~ (arg_ws ~ copy_pathspec){2,} }
 env_pair_name = ${ (ASCII_ALPHANUMERIC | "_")+ }
 env_pair_value = ${ any_whitespace }
 env_pair_quoted_value = ${ string }
-env_pair = @{ env_pair_name ~ "=" ~ (env_pair_quoted_value | env_pair_value) }
+env_pair_single_quoted_value = ${ single_quoted_string }
+env_pair = @{ env_pair_name ~ "=" ~ (env_pair_single_quoted_value | env_pair_quoted_value | env_pair_value) }
 env_pairs = { (arg_ws ~ env_pair)+ }
-env_single_name = @{ ASCII_ALPHA+ }
-env_single_value = @{ any_breakable }
-env_single = {  arg_ws ~ env_single_name ~ env_single_value }
-env = _{ ^"env" ~ (env_pairs | env_single) }
+//env_single_name = @{ ASCII_ALPHA+ }
+//env_single_value = @{ any_breakable }
+//env_single = { arg_ws ~ env_single_name ~ env_single_value }
+//env = _{ ^"env" ~ (env_pairs | env_single) }
+env = _{ ^"env" ~ env_pairs }
 
 misc_instruction = @{ ASCII_ALPHA+ }
 misc_arguments = @{ any_breakable }
