Presere newline escapes in multiline instructions
This attempts to improve on multiline comment parsing by preserving
all line escapes (`\\\n`) when parsing shell-style `RUN` instructions
instead of removing them.

This should help to ensure comments with implicit line continuations,
for example:

```Dockerfile
RUN foo && \
    # example comment
    bar
```

... always at least remain parseable by the shell even if Docker
would ignore them. This might still be technically incorrect in some
situations but should at least be less harmful compared to current
behavior (where shell strings may get mangled).

--- a/src/dockerfile_parser.pest
+++ b/src/dockerfile_parser.pest
@@ -54,7 +54,7 @@ any_breakable = _{
     !NEWLINE ~
     !("\\" ~ NEWLINE) ~
     ANY
-  )* ~ ("\\" ~ NEWLINE ~ (ws* ~ comment ~ NEWLINE)? ~ any_breakable)?
+  )* ~ ("\\" ~ NEWLINE ~ (ws* ~ comment ~ NEWLINE)* ~ any_breakable)?
 }
 
 // consumes any character until the end of the line
