--- a/src/dockerfile_parser.pest
+++ b/src/dockerfile_parser.pest
@@ -29,7 +29,7 @@ step = _{
   )
 }
 
-comment = _{ "#" ~ (!NEWLINE ~ ANY)* }
+comment = @{ "#" ~ (!NEWLINE ~ ANY)* }
 double_quoted_string  = @{ "\"" ~ inner ~ "\"" }
 inner   = @{ (!("\"" | "\\" | "\u{0000}" | "\u{001F}") ~ ANY)* ~ (escape ~ inner)? }
 escape  = @{ "\\" ~ ("b" | "t" | "n" | "f" | "r" | "\"" | "\\" | "'" | unicode | NEWLINE)? }
@@ -43,23 +43,37 @@ string = ${ single_quoted_string | double_quoted_string }
 // insignificant whitespace, not repeated
 ws = _{ " " | "\t" }
 
+// a line continuation, allowing an instruction to continue onto a new line
+line_continuation = _{ "\\" ~ NEWLINE }
+
 // whitespace that may appear between instruction arguments
 // this allows instructions to expand past a newline if escaped
-arg_ws = _{ (ws | ("\\" ~ NEWLINE))+ }
+arg_ws = _{ (ws | line_continuation)+ }
 
-arg_ws_maybe = _{ (ws | ("\\" ~ NEWLINE))* }
+// like arg_ws, but where whitespace is optional
+arg_ws_maybe = _{ (ws | line_continuation)* }
 
 // continues consuming input beyond a newline, if the newline is preceeded by an
 // escape (\)
-// TODO: this does undesirable things with comments in RUN, is that avoidable?
-// seems like if we're going to pass comments through we should at least include
-// the newlines
-any_breakable = _{
+// these tokens need to be preserved in the final tree so they can be handled
+// appropraitely; pest's ignore rules aren't sufficient for our needs
+comment_line = _{ ws* ~ comment ~ NEWLINE? }
+any_content = @{
   (
     !NEWLINE ~
-    !("\\" ~ NEWLINE) ~
+    !line_continuation ~
     ANY
-  )* ~ ("\\" ~ NEWLINE ~ (ws* ~ comment ~ NEWLINE)* ~ any_breakable)?
+  )+
+}
+any_breakable = ${
+  (
+    // can be any comment string (no line continuation required)
+    comment_line ~ any_breakable?
+  ) | (
+    // ... OR some piece of content, requiring a continuation EXCEPT on the
+    // final line
+    any_content ~ (line_continuation ~ any_breakable)?
+  )
 }
 
 // consumes any character until the end of the line
@@ -127,7 +141,10 @@ env_pair_value = ${ any_whitespace }
 env_pair_quoted_value = ${ string }
 env_pair = @{ env_pair_name ~ "=" ~ (env_pair_quoted_value | env_pair_value) }
 env_pairs = { (arg_ws ~ env_pair)+ }
-env = _{ ^"env" ~ env_pairs }
+env_single_name = @{ ASCII_ALPHA+ }
+env_single_value = @{ any_breakable }
+env_single = {  arg_ws ~ env_single_name ~ arg_ws ~ env_single_value }
+env = _{ ^"env" ~ (env_single | env_pairs) }
 
 misc_instruction = @{ ASCII_ALPHA+ }
 misc_arguments = @{ any_breakable }
