Allow quoted ENV single values; allow `_` in env single names

--- a/src/dockerfile_parser.pest
+++ b/src/dockerfile_parser.pest
@@ -138,14 +138,14 @@ copy_flag = { "--" ~ copy_flag_name ~ "=" ~ copy_flag_value }
 copy_pathspec = @{ any_whitespace }
 copy = { ^"copy" ~ (arg_ws ~ copy_flag)* ~ (arg_ws ~ copy_pathspec){2,} }
 
-env_pair_name = ${ (ASCII_ALPHANUMERIC | "_")+ }
+env_name = ${ (ASCII_ALPHANUMERIC | "_")+ }
 env_pair_value = ${ any_whitespace }
 env_pair_quoted_value = ${ string }
-env_pair = @{ env_pair_name ~ "=" ~ (env_pair_quoted_value | env_pair_value) }
+env_pair = @{ env_name ~ "=" ~ (env_pair_quoted_value | env_pair_value) }
 env_pairs = { (arg_ws ~ env_pair?)+ }
-env_single_name = @{ ASCII_ALPHA+ }
+env_single_quoted_value = ${ string }
 env_single_value = @{ any_breakable }
-env_single = {  arg_ws ~ env_single_name ~ arg_ws ~ env_single_value }
+env_single = {  arg_ws ~ env_name ~ arg_ws ~ (env_single_quoted_value | env_single_value) }
 env = _{ ^"env" ~ (env_single | env_pairs) }
 
 misc_instruction = @{ ASCII_ALPHA+ }
