Properly support image hashes in FROM instructions
This adjusts the grammar to support hashes in FROM instructions, for
example `alpine@sha256:074d...`.

Note that `ImageRef` has already parsed these properly for some time,
however the dockerfile grammar considered `@` characters in FROMs
invalid.

Closes #7

--- a/src/dockerfile_parser.pest
+++ b/src/dockerfile_parser.pest
@@ -101,7 +101,7 @@ string_array = _{
   ) | "[" ~ arg_ws_maybe ~ "]"
 }
 
-from_image = @{ (ASCII_ALPHANUMERIC | "_" | "-" | "." | ":" | "/" | "$" | "{" | "}")+ }
+from_image = @{ (ASCII_ALPHANUMERIC | "_" | "-" | "." | ":" | "/" | "$" | "{" | "}" | "@")+ }
 from_alias = { identifier_whitespace }
 from_alias_outer = _{ arg_ws ~ ^"as" ~ arg_ws ~ from_alias }
 from = { ^"from" ~ arg_ws ~ from_image ~ from_alias_outer?  }
