--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,12 @@
 version: 2
 updates:
-- package-ecosystem: cargo
-  open-pull-requests-limit: 25
-  directory: /
-  registries: []
-  schedule:
-    interval: daily
+  - package-ecosystem: cargo
+    open-pull-requests-limit: 25
+    directory: /
+    registries: []
+    schedule:
+      interval: daily
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
